# D435i_multicam_hardware_sync

./: CMakeLists.txt  hwsyn.cpp  readme.md
