project(hwsyn)
cmake_minimum_required(VERSION 2.8)
aux_source_directory(. SRC_LIST)
add_executable(${PROJECT_NAME} ${SRC_LIST})
set(CMAKE_CXX_FLAGS "-std=c++11")
set( CMAKE_BUILD_TYPE Debug )
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread")
set(DEPENDENCIES realsense2 )
find_package(OpenCV REQUIRED)
target_link_libraries(hwsyn ${DEPENDENCIES})
target_link_libraries(hwsyn ${OpenCV_LIBS})